--- a/frontmatter/preface.tex
+++ b/frontmatter/preface.tex
@@ -1,5 +1,5 @@
 %\let\cleardoublepage\clearpage
-\addcontentsline{toc}{chapter}{Preface}
+%\addcontentsline{toc}{chapter}{Preface}
 \chapter*{Preface}
 This master's thesis is part of my Master of Science in Industrial Mathematics at the Norwegian University of Science and Technology, Department of Mathematical Sciences. The thesis was carried out in collaboration with SINTEF Digital. 
 
