--- a/main.tex
+++ b/main.tex
@@ -17,12 +17,13 @@
 
 \input{frontmatter/preface}
 \input{frontmatter/abstract}
+\input{frontmatter/abstract_norwegian.tex}
 
 \cleardoublepage
 \begingroup
 \let\cleardoublepage\clearpage
 \renewcommand*\contentsname{Table of Contents}
-\addcontentsline{toc}{chapter}{Table of Contents}
+%\addcontentsline{toc}{chapter}{Table of Contents}
 \tableofcontents
 
 
