--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -1,9 +1,9 @@
 %\let\cleardoublepage\clearpage
 \chapter*{Abstract}
-\addcontentsline{toc}{chapter}{Abstract}
-This thesis provides an introduction to Automatic Differentiation (AD) and how it can be utilized to calculate the derivatives of any function with the same precision as an analytic expression, with very little computational effort. It has been used to elegantly solve Partial Differential Equations (PDEs) describing flow in porous media, by using a finite volume method and a discretization of the gradient- and divergence operator. The goal of the thesis has been to investigate whether the new programming language called Julia, can be used both as a language for quickly prototyping new oil recovery simulators, as well as implementing highly efficient industrial simulators.
+%\addcontentsline{toc}{chapter}{Abstract}
+This thesis provides an introduction to Automatic Differentiation (AD) and how it can be utilized to calculate the derivatives of any function with the same precision as an analytic expression, with very little computational effort. It has been used to elegantly solve Partial Differential Equations (PDEs) describing flow in porous media, by using a finite volume method and a discretization of the gradient- and the divergence operator. The goal of the thesis has been to investigate whether the new programming language called Julia can be used both as a language for quickly prototyping new oil recovery simulators, as well as implementing highly efficient industrial simulators.
 
-Three different AD libraries have been implemented in Julia and compared to implementations from the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}}, created by the Computational Geosciences  group  at  the  department  of  Mathematics  and  Cybernetics  at  SINTEF Digital. MRST is a toolbox designed for quick prototyping with high-level- and user-friendly AD tools. The first two implementations in Julia were inspired by the AD tools in MRST, and were called \texttt{ForwardAutoDiff}(\texttt{FAD}) and \texttt{CustomJacobianAutoDiff}(\texttt{CJAD}). The third implementation, local AD, was inspired by the implementation of AD in the Open Porous Media (OPM) Flow simulator \emph{\citep{opm}}. OPM is a toolbox developed by the same group at SINTEF for creating efficient industrial simulators in C and C++. 
+Three different AD libraries have been implemented in Julia and compared to implementations from the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}}, created by the Computational Geosciences  group  at  the  department  of  Mathematics  and  Cybernetics  at  SINTEF Digital. MRST is a toolbox designed for quick prototyping with high-level- and user-friendly AD tools. The first two implementations in Julia, \texttt{ForwardAutoDiff}(\texttt{FAD}) and \texttt{CustomJacobianAutoDiff}(\texttt{CJAD}), were inspired by the AD tools in MRST. The third implementation, local AD, was inspired by the implementation of AD in the Open Porous Media (OPM) Flow Simulator \emph{\citep{opm}}. OPM is a toolbox developed by the same group at SINTEF for creating efficient industrial simulators in C and C++. 
 
 To benchmark the AD methods, two simulations were implemented. The first one was a single-phase flow solver, simulating the pressure drop in a reservoir when producing oil. \texttt{FAD} was the slowest method being approximately two times slower than both \texttt{CJAD} and the implementation in MRST. While \texttt{CJAD} and MRST exhibited similar performance, the method of Local AD was approximately six times faster than these two. The second simulation was a two-phase flow solver, simulating how water flows when injected into a reservoir. Analogous to the first simulation, \texttt{CJAD} and MRST yielded similar performance, while the method using local AD was approximately five times faster.
 
